Correct duplate errors in bibfile

--- a/bibligrin.bib
+++ b/bibligrin.bib
@@ -65,29 +65,31 @@ and Toranzos, Victor J and Moch{\'a}n, W Luis},
   publisher={American Association of Physics Teachers}
 }
 %26
-@article{khung2008using,
-  title={Using continuous porous silicon gradients to study the influence
-  of surface topography on the behaviour of neuroblastoma cells},
-  author={Khung, YL and Barritt, G and Voelcker, NH},
-  journal={Experimental Cell Research},
-  volume={314},
-  number={4},
-  pages={789--800},
-  year={2008},
-  publisher={Elsevier}
-}
+%@article{khung2008using,
+%  title={Using continuous porous silicon gradients to study the influence
+%  of surface topography on the behaviour of neuroblastoma cells},
+%  author={Khung, YL and Barritt, G and Voelcker, NH},
+%  journal={Experimental Cell Research},
+%  volume={314},
+%  number={4},
+%  pages={789--800},
+%  year={2008},
+%  publisher={Elsevier}
+%}
+
 %25
-@article{wang2019fabrication,
-  title={Fabrication of a lateral gradient rugate in porous silicon
-  for a miniature spectrometer application},
-  author={Wang, Joanna and Sailor, Michael J and Chang, Byoung-Yong},
-  journal={ChemElectroChem},
-  volume={6},
-  number={24},
-  pages={5967--5972},
-  year={2019},
-  publisher={Wiley Online Library}
-}
+%@article{wang2019fabrication,
+%  title={Fabrication of a lateral gradient rugate in porous silicon
+%  for a miniature spectrometer application},
+%  author={Wang, Joanna and Sailor, Michael J and Chang, Byoung-Yong},
+%  journal={ChemElectroChem},
+%  volume={6},
+%  number={24},
+%  pages={5967--5972},
+%  year={2019},
+%  publisher={Wiley Online Library}
+%}
+
 %24
 @article{krueger2018electrochemical,
   title={Electrochemical Fabrication of Flat, Polymer-Embedded
